Experiments/TNOO/ANTLR4/TNOOParser.java
// Generated from TNOO.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TNOOParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, WS=66, Integer=67, 
		Real=68, Character=69, Ident=70, String=71, Letter=72, Digit=73, HexDigit=74, 
		SqChar=75, DqChar=76, Comment=77;
	public static final int
		RULE_number = 0, RULE_module = 1, RULE_importList = 2, RULE_declSeq = 3, 
		RULE_constDecl = 4, RULE_typeDecl = 5, RULE_varDecl = 6, RULE_procDecl = 7, 
		RULE_forwardDecl = 8, RULE_formalPars = 9, RULE_fPSection = 10, RULE_receiver = 11, 
		RULE_type = 12, RULE_fieldList = 13, RULE_statementSeq = 14, RULE_statement = 15, 
		RULE_case = 16, RULE_caseLabels = 17, RULE_guard = 18, RULE_constExpr = 19, 
		RULE_expr = 20, RULE_literal = 21, RULE_simpleExpr = 22, RULE_term = 23, 
		RULE_factor = 24, RULE_set = 25, RULE_element = 26, RULE_relation = 27, 
		RULE_addOp = 28, RULE_mulOp = 29, RULE_designator = 30, RULE_exprList = 31, 
		RULE_identList = 32, RULE_qualident = 33, RULE_identDef = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"number", "module", "importList", "declSeq", "constDecl", "typeDecl", 
			"varDecl", "procDecl", "forwardDecl", "formalPars", "fPSection", "receiver", 
			"type", "fieldList", "statementSeq", "statement", "case", "caseLabels", 
			"guard", "constExpr", "expr", "literal", "simpleExpr", "term", "factor", 
			"set", "element", "relation", "addOp", "mulOp", "designator", "exprList", 
			"identList", "qualident", "identDef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MODULE'", "';'", "'BEGIN'", "'END'", "'.'", "'IMPORT'", "':='", 
			"','", "'CONST'", "'TYPE'", "'VAR'", "'='", "':'", "'PROCEDURE'", "'^'", 
			"'('", "')'", "'ARRAY'", "'OF'", "'RECORD'", "'TABLE'", "'POINTER'", 
			"'TO'", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'CASE'", "'|'", "'WHILE'", 
			"'DO'", "'REPEAT'", "'UNTIL'", "'FOR'", "'BY'", "'LOOP'", "'WITH'", "'EXIT'", 
			"'RETURN'", "'..'", "'['", "']'", "'[:'", "':]'", "'[.'", "'.]'", "'+'", 
			"'-'", "'NIL'", "'~'", "'{'", "'}'", "'#'", "'<'", "'<='", "'>'", "'>='", 
			"'IN'", "'IS'", "'OR'", "'*'", "'/'", "'DIV'", "'MOD'", "'&'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS", "Integer", "Real", "Character", 
			"Ident", "String", "Letter", "Digit", "HexDigit", "SqChar", "DqChar", 
			"Comment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TNOO.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TNOOParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class NumberContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(TNOOParser.Integer, 0); }
		public TerminalNode Real() { return getToken(TNOOParser.Real, 0); }
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterNumber(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitNumber(this);
		}
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_number);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_la = _input.LA(1);
			if ( !(_la==Integer || _la==Real) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public List<TerminalNode> Ident() { return getTokens(TNOOParser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(TNOOParser.Ident, i);
		}
		public DeclSeqContext declSeq() {
			return getRuleContext(DeclSeqContext.class,0);
		}
		public ImportListContext importList() {
			return getRuleContext(ImportListContext.class,0);
		}
		public StatementSeqContext statementSeq() {
			return getRuleContext(StatementSeqContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__0);
			setState(73);
			match(Ident);
			setState(74);
			match(T__1);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__5) {
				{
				setState(75);
				importList();
				}
			}

			setState(78);
			declSeq();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(79);
				match(T__2);
				setState(80);
				statementSeq();
				}
			}

			setState(83);
			match(T__3);
			setState(84);
			match(Ident);
			setState(85);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportListContext extends ParserRuleContext {
		public List<TerminalNode> Ident() { return getTokens(TNOOParser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(TNOOParser.Ident, i);
		}
		public ImportListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterImportList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitImportList(this);
		}
	}

	public final ImportListContext importList() throws RecognitionException {
		ImportListContext _localctx = new ImportListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__5);
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(88);
				match(Ident);
				setState(89);
				match(T__6);
				}
				break;
			}
			setState(92);
			match(Ident);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(93);
				match(T__7);
				setState(96);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(94);
					match(Ident);
					setState(95);
					match(T__6);
					}
					break;
				}
				setState(98);
				match(Ident);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclSeqContext extends ParserRuleContext {
		public List<ProcDeclContext> procDecl() {
			return getRuleContexts(ProcDeclContext.class);
		}
		public ProcDeclContext procDecl(int i) {
			return getRuleContext(ProcDeclContext.class,i);
		}
		public List<ForwardDeclContext> forwardDecl() {
			return getRuleContexts(ForwardDeclContext.class);
		}
		public ForwardDeclContext forwardDecl(int i) {
			return getRuleContext(ForwardDeclContext.class,i);
		}
		public List<ConstDeclContext> constDecl() {
			return getRuleContexts(ConstDeclContext.class);
		}
		public ConstDeclContext constDecl(int i) {
			return getRuleContext(ConstDeclContext.class,i);
		}
		public List<TypeDeclContext> typeDecl() {
			return getRuleContexts(TypeDeclContext.class);
		}
		public TypeDeclContext typeDecl(int i) {
			return getRuleContext(TypeDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public DeclSeqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declSeq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterDeclSeq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitDeclSeq(this);
		}
	}

	public final DeclSeqContext declSeq() throws RecognitionException {
		DeclSeqContext _localctx = new DeclSeqContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declSeq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << T__10))) != 0)) {
				{
				setState(133);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
					{
					setState(106);
					match(T__8);
					setState(112);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Ident) {
						{
						{
						setState(107);
						constDecl();
						setState(108);
						match(T__1);
						}
						}
						setState(114);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case T__9:
					{
					setState(115);
					match(T__9);
					setState(121);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Ident) {
						{
						{
						setState(116);
						typeDecl();
						setState(117);
						match(T__1);
						}
						}
						setState(123);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				case T__10:
					{
					setState(124);
					match(T__10);
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==Ident) {
						{
						{
						setState(125);
						varDecl();
						setState(126);
						match(T__1);
						}
						}
						setState(132);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__13) {
				{
				setState(144);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(138);
					procDecl();
					setState(139);
					match(T__1);
					}
					break;
				case 2:
					{
					setState(141);
					forwardDecl();
					setState(142);
					match(T__1);
					}
					break;
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDeclContext extends ParserRuleContext {
		public IdentDefContext identDef() {
			return getRuleContext(IdentDefContext.class,0);
		}
		public ConstExprContext constExpr() {
			return getRuleContext(ConstExprContext.class,0);
		}
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterConstDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitConstDecl(this);
		}
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			identDef();
			setState(150);
			match(T__11);
			setState(151);
			constExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclContext extends ParserRuleContext {
		public IdentDefContext identDef() {
			return getRuleContext(IdentDefContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitTypeDecl(this);
		}
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			identDef();
			setState(154);
			match(T__11);
			setState(155);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public IdentListContext identList() {
			return getRuleContext(IdentListContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_varDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			identList();
			setState(158);
			match(T__12);
			setState(159);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcDeclContext extends ParserRuleContext {
		public IdentDefContext identDef() {
			return getRuleContext(IdentDefContext.class,0);
		}
		public DeclSeqContext declSeq() {
			return getRuleContext(DeclSeqContext.class,0);
		}
		public TerminalNode Ident() { return getToken(TNOOParser.Ident, 0); }
		public ReceiverContext receiver() {
			return getRuleContext(ReceiverContext.class,0);
		}
		public FormalParsContext formalPars() {
			return getRuleContext(FormalParsContext.class,0);
		}
		public StatementSeqContext statementSeq() {
			return getRuleContext(StatementSeqContext.class,0);
		}
		public ProcDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterProcDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitProcDecl(this);
		}
	}

	public final ProcDeclContext procDecl() throws RecognitionException {
		ProcDeclContext _localctx = new ProcDeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_procDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161);
			match(T__13);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(162);
				receiver();
				}
			}

			setState(165);
			identDef();
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(166);
				formalPars();
				}
			}

			setState(169);
			match(T__1);
			setState(170);
			declSeq();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(171);
				match(T__2);
				setState(172);
				statementSeq();
				}
			}

			setState(175);
			match(T__3);
			setState(176);
			match(Ident);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForwardDeclContext extends ParserRuleContext {
		public IdentDefContext identDef() {
			return getRuleContext(IdentDefContext.class,0);
		}
		public ReceiverContext receiver() {
			return getRuleContext(ReceiverContext.class,0);
		}
		public FormalParsContext formalPars() {
			return getRuleContext(FormalParsContext.class,0);
		}
		public ForwardDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forwardDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterForwardDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitForwardDecl(this);
		}
	}

	public final ForwardDeclContext forwardDecl() throws RecognitionException {
		ForwardDeclContext _localctx = new ForwardDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_forwardDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(T__13);
			setState(179);
			match(T__14);
			setState(181);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(180);
				receiver();
				}
			}

			setState(183);
			identDef();
			setState(185);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__15) {
				{
				setState(184);
				formalPars();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormalParsContext extends ParserRuleContext {
		public List<FPSectionContext> fPSection() {
			return getRuleContexts(FPSectionContext.class);
		}
		public FPSectionContext fPSection(int i) {
			return getRuleContext(FPSectionContext.class,i);
		}
		public List<QualidentContext> qualident() {
			return getRuleContexts(QualidentContext.class);
		}
		public QualidentContext qualident(int i) {
			return getRuleContext(QualidentContext.class,i);
		}
		public FormalParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formalPars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterFormalPars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitFormalPars(this);
		}
	}

	public final FormalParsContext formalPars() throws RecognitionException {
		FormalParsContext _localctx = new FormalParsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_formalPars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(T__15);
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10 || _la==Ident) {
				{
				setState(188);
				fPSection();
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(189);
					match(T__1);
					setState(190);
					fPSection();
					}
					}
					setState(195);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(198);
			match(T__16);
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__12) {
				{
				setState(199);
				match(T__12);
				setState(200);
				qualident();
				setState(205);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(201);
					match(T__7);
					setState(202);
					qualident();
					}
					}
					setState(207);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FPSectionContext extends ParserRuleContext {
		public List<TerminalNode> Ident() { return getTokens(TNOOParser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(TNOOParser.Ident, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public FPSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fPSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterFPSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitFPSection(this);
		}
	}

	public final FPSectionContext fPSection() throws RecognitionException {
		FPSectionContext _localctx = new FPSectionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_fPSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(210);
				match(T__10);
				}
			}

			setState(213);
			match(Ident);
			setState(218);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__7) {
				{
				{
				setState(214);
				match(T__7);
				setState(215);
				match(Ident);
				}
				}
				setState(220);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(221);
			match(T__12);
			setState(222);
			type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReceiverContext extends ParserRuleContext {
		public List<TerminalNode> Ident() { return getTokens(TNOOParser.Ident); }
		public TerminalNode Ident(int i) {
			return getToken(TNOOParser.Ident, i);
		}
		public ReceiverContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_receiver; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).enterReceiver(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TNOOListener ) ((TNOOListener)listener).exitReceiver(this);
		}
	}

	public final ReceiverContext receiver() throws RecognitionException {
		ReceiverContext _localctx = new ReceiverContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_receiver);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			match(T__15);
			setState(226);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__10) {
				{
				setState(225);
				match(T__10);
				}
			}

			setState(228);
			match(Ident);
			setState(229);
			match(T__12);
			setState(230);
			match(Ident);
			setState(231);
			match(T__16);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
